--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -51,7 +51,7 @@
 
         @headingComp(heading)
 
-        @rowFormGroupWithSubHeading(inProgressAssets, "in-progress")
+        @rowFormGroupWithSubHeading(inProgressAssets, "inprogress")
 
         @* display number of in progress and complete companies in sub-heading if greater than one, else show 'complete' *@
         @{
