DDCE-6594 move subheading message logic from component to view

--- a/app/views/components/RowFormGroupWithSubHeading.scala.html
+++ b/app/views/components/RowFormGroupWithSubHeading.scala.html
@@ -21,14 +21,15 @@
  addToRow: AddToRow
 )
 
-@(data: Seq[AddRow], id: String, countOpt: Option[String] = None)(implicit messages: Messages)
+@(data: Seq[AddRow], id: String, alternateSubheading: Option[String] = None)(implicit messages: Messages)
 
 @if(data.nonEmpty) {
   <h2 class="govuk-heading-m" id="data-list-heading--@id">
-    @* todo - figure out what we were trying to do here *@
-    @* @if(countOpt.isDefined) { @messages("addAssets.nonTaxable.count.subHeading", countOpt.get) } else { @messages(s"site.$id") } *@
-
-    @messages(s"site.$id")
+    @if(alternateSubheading.isDefined){
+        @alternateSubheading.get
+    } else {
+        @messages(s"site.$id")
+    }
   </h2>
 
   <div class="govuk-form-group">
