--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -53,14 +53,21 @@
 
         @rowFormGroupWithSubHeading(inProgressAssets, "inprogress")
 
+
         @* display number of in progress and complete companies in sub-heading if greater than one, else show 'complete' *@
         @{
-            if(completeAssets.size > 1) {
-                rowFormGroupWithSubHeading(completeAssets, "complete", Some(completeAssets.size.toString))
+            if(prefix == "addAssets.nonTaxable" && completeAssets.size > 1) {
+                rowFormGroupWithSubHeading(
+                    data = completeAssets,
+                    id = "complete",
+                    alternateSubheading = Some(messages("addAssets.nonTaxable.count.subHeading", completeAssets.size.toString))
+                )
             } else {
                 rowFormGroupWithSubHeading(completeAssets, "complete")
             }
         }
+
+
 
         @if(maxedOut.size == 1) {
             <div class="govuk-inset-text">
