--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -73,32 +73,32 @@
             <div class="govuk-inset-text">
                 <ul class="govuk-list">
                     @if(maxedOut.head._1 == "whatKindOfAsset.Other") {
-                        <li><p>@messages(s"addAssets.maxedOut.other.just1", maxedOut.head._2.toString)</p></li>
+                        <li><p>@messages(s"$prefix.maxedOut.other.just1", maxedOut.head._2.toString)</p></li>
                     } else {
-                        <li><p>@messages(s"addAssets.maxedOut.just1", messages(maxedOut.head._1).uncapitalize, maxedOut.head._2.toString)</p></li>
+                        <li><p>@messages(s"$prefix.maxedOut.just1", messages(maxedOut.head._1).uncapitalize, maxedOut.head._2.toString)</p></li>
                     }
-                    <li><p>@messages(s"addAssets.maxedOut.just1.paragraph")</p></li>
+                    <li><p>@messages(s"$prefix.maxedOut.just1.paragraph")</p></li>
                 </ul>
             </div>
         } else if(maxedOut.size > 1) {
             <div class="govuk-inset-text">
                 <ul class="govuk-list">
                     <li>
-                        <p>@messages(s"addAssets.maxedOut.moreThan1")</p>
+                        <p>@messages(s"$prefix.maxedOut.moreThan1")</p>
                         <ul class="govuk-list">
                             @for(option <- maxedOut) {
                             <li>@messages(option._1)</li>
                             }
                         </ul>
                     </li>
-                    <li><p>@messages(s"addAssets.maxedOut.moreThan1.paragraph")</p></li>
+                    <li><p>@messages(s"$prefix.maxedOut.moreThan1.paragraph")</p></li>
                 </ul>
             </div>
         }
 
         @inputRadio(
             field = form("value"),
-            legend = messages(s"addAssets.additional-content"),
+            legend = messages(s"$prefix.additional-content"),
             legendAsHeading = false,
             legendClass = Some("govuk-heading-m"),
             inputs = mapRadioOptionsToRadioItems(form("value"), AddAssets.options(prefix)),
