--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -16,7 +16,7 @@
 
 @import controllers.asset.routes._
 @import models.AddAssets
-@import implicitConversions.Implicits._
+@import extensions.Extensions._
 @import viewmodels.AddRow
 @import views.html.components.{SubmitButton, Heading, InputRadio, ErrorSummary, RowFormGroupWithSubHeading, CompletedNonEeaCompaniesWithSubHeading}
 
@@ -70,7 +70,7 @@
                     } else if(maxedOut.head._1 == "whatKindOfAsset.NonEeaBusiness") {
                         <li><p>@messages(s"$prefix.maxedOut.just1", messages(maxedOut.head._1).lowercaseFirstLetterOfFirstWord, maxedOut.head._2.toString)</p></li>
                     } else {
-                        <li><p>@messages(s"$prefix.maxedOut.just1", messages(maxedOut.head._1).uncapitalize, maxedOut.head._2.toString)</p></li>
+                        <li><p>@messages(s"$prefix.maxedOut.just1", messages(maxedOut.head._1).uncapitalise, maxedOut.head._2.toString)</p></li>
                     }
                     <li><p>@messages(s"$prefix.maxedOut.just1.paragraph")</p></li>
                 </ul>
